# Notas-Fiscais-API

./: .env  .env_exemplo  .gitignore  README.md  conexao_modelo.json  database.py  gerador_secretKey.py  main.py  pyproject.toml  requirements.txt
Scripts/: activate  activate.bat
app/models/: Nota.py
app/routers/: filiais.py
app/schemas/: filial_schema.py
app/services/: filialService.py
app/utils/: get_infosDB.py
config/: env.py
controllers/: filialController.py
firebird/FDBs/Dourados/: SOFTPAX.FDB
firebird/FDBs/Dourados-Cemiterio/: SOFTPAX.FDB
firebird/Scripts/: criacao.sql  executa.sql
migrations/: env.py
migrations/versions/: 195ebc81393a_criando_tabela_de_usuários.py  273b25b4fef6_exclusão_lógica_de_usuários.py  5ac7a57fff91_ajustando_coluna_de_filiais.py  e51c93ab6640_cria_usuário_inicial.py  ee24d9090395_apenas_cpf_como_unique.py
models/: Cliente.py  Conexao.py  Filial.py  Nota.py
requests/: AtualizarTetoRequest.py
src/myapp/: main.py  security.py  utils.py
src/myapp/config/: conexao.json  settings.py
src/myapp/crud/: filiais.py  notas.py  usuarios.py
src/myapp/database/: database.py
src/myapp/database/queries/: nfse.py
src/myapp/db/: database.py
src/myapp/db/queries/: nfse.py
src/myapp/models/: Nota.py  Usuario.py
src/myapp/routers/: filiais.py  usuarios.py
src/myapp/schemas/: ConexaoSchema.py  FilialSchema.py  JWTSchema.py  NotasRequestSchema.py  UsuarioSchema.py
src/myapp/service/: filiais.py  notas.py  usuarios.py
src/myapp/service/bot_notas/: logging.json  main.py  (+1 more)
src/myapp/utils/: get_infosDB.py
(+4 files in other folders)
